--- a/styles/index.css
+++ b/styles/index.css
@@ -40,7 +40,11 @@ input[type=text] {
 input[type=text]:focus{
     box-shadow: 0px 1px #2782FF !important;
 }
-h1, main{
+nav{
+    margin-top:1em!important;
+    margin-bottom:1em;
+}
+h1, main, nav{
     background-color: white;
     opacity: 0.75;
     border-radius: 10px;
